--- a/demo.ipynb
+++ b/demo.ipynb
@@ -295,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Normal si les resultats on pas de sens\")\n",
+    "print(\"Normal si les resultats ont pas de sens\")\n",
     "\n",
     "fig, axes = plt.subplots(1, 4, figsize = (9,4), facecolor = 'w')\n",
     "\n",
